fix alignment issues of edit icons across pages

--- a/src/components/WarehouseInventoryList/WarehouseInventoryList.scss
+++ b/src/components/WarehouseInventoryList/WarehouseInventoryList.scss
@@ -197,6 +197,8 @@
 
   &__item-edit {
     cursor: pointer;
+    display: flex;
+    align-items: center;
   }
 
   &__item-delete {
