--- a/src/components/WarehouseList/WarehouseList.scss
+++ b/src/components/WarehouseList/WarehouseList.scss
@@ -138,6 +138,10 @@
   &__link {
     text-decoration: none;
   }
+  &__icon-link {
+    display: flex;
+    align-items: center;
+  }
   &__cell {
     padding: 8px 0;
     @include tablet {
