--- a/src/pages/Warehouses/Warehouses.scss
+++ b/src/pages/Warehouses/Warehouses.scss
@@ -5,7 +5,7 @@
   margin: 16px;
   // margin-top: -4rem;
   border-radius: 3px;
-  box-shadow: 0px 2px 5px 0px #13182c1a;
+  // box-shadow: 0px 2px 5px 0px #13182c1a;
   z-index: 1;
   background-color: $primary-white;
 
